--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,23 @@ html{
 
 .app__videos{
   position: relative;
-  height: 800px;
+  height: 80%;
   overflow: scroll;
-  width: 80%;
+  border-radius: 10px;
+  border: 4px solid rgb(17, 107, 243);
+  width: 100%;
   max-width: 500px;
   scroll-snap-type: y mandatory;
 }
 
 .app{
   background-color: black;
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
+
+.app__videos::-webkit-scrollbar{
+  display: none;
+}
+
