--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ html{
   overflow: scroll;
   border-radius: 10px;
   border: 4px solid rgb(17, 107, 243);
-  width: 100%;
+  width: 25%;
   max-width: 500px;
   scroll-snap-type: y mandatory;
 }
@@ -16,6 +16,7 @@ html{
 .app{
   background-color: black;
   height: 100vh;
+  width: 100vw;
   display: grid;
   place-items: center;
 }
