--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,27 @@ html{
 
 .app__videos{
   position: relative;
-  height: 80%;
+  height: 120%;
   overflow: scroll;
   border-radius: 10px;
   border: 4px solid rgb(17, 107, 243);
-  width: 100%;
+  width: 90%;
   max-width: 500px;
   scroll-snap-type: y mandatory;
+  bottom: 0px;
+}
+
+.app__name{
+  color: white;
+  font-family: 'Pacifico', cursive;
+  font-size: 50px;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: rgb(17, 107, 243);
 }
 
 .app{
   background-color: black;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: grid;
   place-items: center;
