--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html{
 
 .app__videos{
   position: relative;
-  height: 120%;
+  height: 73vh;
   overflow: scroll;
   border-radius: 10px;
   border: 4px solid rgb(17, 107, 243);
@@ -18,15 +18,18 @@ html{
   color: white;
   font-family: 'Pacifico', cursive;
   font-size: 50px;
-  -webkit-text-stroke-width: 2px;
+  padding: 40px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: rgb(17, 107, 243);
+
 }
 
 .app{
+  padding-top: 20px;
   background-color: black;
   height: 100%;
   width: 100vw;
-  display: flex;
+  display: grid;
   place-items: center;
 }
 
