--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,15 @@ html{
 
 .app__videos{
   position: relative;
-  height: 73vh;
+  height: 70vh;
   overflow: scroll;
-  border-radius: 10px;
-  border: 4px solid rgb(17, 107, 243);
+  border-radius: 12px;
+  border: 5px solid rgb(17, 107, 243);
   width: 90%;
   max-width: 500px;
   scroll-snap-type: y mandatory;
   bottom: 0px;
+  margin-bottom: 20px
 }
 
 .app__name{
